Following changes done 1. FaceScan Context screen and Disclaimer dialog 2. FaceScan Toast Message Updated 3. FaceScan - Gender At Birth indo icon added with dialog 4.  FaceScan scan screen Back button Replaced 5. FaceScan Result - Disclaimer Pop Up Changed 6. Face Scan Detailed Page updated 7. Home Screen Post Free Trial Expiry design updated 8. Series Detailed Page- Next and All Episode Listing

--- a/app/src/main/res/layout/activity_facescan_context_screen.xml
+++ b/app/src/main/res/layout/activity_facescan_context_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -41,7 +42,7 @@
                 android:id="@+id/gifImageView"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:layout_gravity="center_horizontal"/>
+                android:layout_gravity="center_horizontal" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -51,7 +52,7 @@
                 android:layout_marginTop="24dp"
                 android:gravity="center_horizontal"
                 android:fontFamily="@font/dmsans_bold"
-                android:textColor="@color/ql_facescan_color"/>
+                android:textColor="@color/light_orange" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -66,7 +67,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="12dp"
                     android:layout_marginStart="12dp"
-                    android:src="@drawable/fs_cs1" />
+                    android:src="@drawable/fs_cs1"
+                    app:tint="@color/light_orange" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -91,7 +93,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="12dp"
                     android:layout_marginStart="12dp"
-                    android:src="@drawable/fs_cs2"/>
+                    android:src="@drawable/fs_cs2"
+                    app:tint="@color/light_orange" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -116,7 +119,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="12dp"
                     android:layout_marginStart="12dp"
-                    android:src="@drawable/fs_cs3"/>
+                    android:src="@drawable/fs_cs3"
+                    app:tint="@color/light_orange" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -152,7 +156,7 @@
             android:layout_marginTop="16dp"
             android:fontFamily="@font/dmsans_bold"
             android:textColor="@color/white"
-            android:backgroundTint="@color/ql_facescan_color" />
+            android:backgroundTint="@color/light_orange" />
 
     </LinearLayout>
 
