--- a/app/src/main/res/layout/activity_anura_measurement.xml
+++ b/app/src/main/res/layout/activity_anura_measurement.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
 
 
     <ai.nuralogix.anuracream.ui.views.MeasurementView
@@ -85,10 +83,14 @@
 
     <ImageButton
         android:id="@+id/btn_back"
-        android:layout_margin="5dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:padding="8dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:src="@drawable/close_breathwork"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/ic_leftarrow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
