--- a/app/src/main/res/layout/activity_newhealthcamreport.xml
+++ b/app/src/main/res/layout/activity_newhealthcamreport.xml
@@ -250,10 +250,10 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginRight="@dimen/margin_card_16dp"
+                                android:layout_marginEnd="@dimen/margin_card_16dp"
                                 android:fontFamily="@font/dmsans_bold"
                                 android:textSize="@dimen/textsize_large"
-                                android:text="You’ve Used Your Trial Scan. For More, Explore Our Plan." />
+                                android:text="Time For A Check-In! It’s Been A While Since Your Last Face Scan." />
 
                             <RelativeLayout
                                 android:layout_width="match_parent"
@@ -264,7 +264,7 @@
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:orientation="horizontal"
-                                    android:layout_toLeftOf="@+id/img_lastfacescan_arrow"
+                                    android:layout_toStartOf="@+id/img_lastfacescan_arrow"
                                     android:layout_margin="5dp"
                                     android:layout_height="wrap_content">
 
@@ -272,21 +272,8 @@
                                         android:layout_width="wrap_content"
                                         android:text="7 Jan, 2024"
                                         android:id="@+id/tv_last_report_date"
-                                        android:layout_height="wrap_content" />
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:text="|"
-                                        android:layout_marginStart="10dp"
-                                        android:layout_marginEnd="10dp"
-                                        android:visibility="gone"
-                                        android:layout_height="wrap_content" />
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:text="10:00 PM"
-
-                                        android:visibility="gone"
+                                        android:textSize="12sp"
+                                        android:textColor="@color/txt_color_header"
                                         android:layout_height="wrap_content" />
                                 </LinearLayout>
 
@@ -297,7 +284,7 @@
                                     android:layout_alignParentEnd="true"
                                     android:layout_marginEnd="20dp"
                                     android:layout_centerVertical="true"
-                                    android:visibility="gone"
+                                    android:visibility="visible"
                                     android:layout_height="wrap_content" />
                             </RelativeLayout>
 
@@ -316,7 +303,7 @@
                         android:background="@drawable/bg_gray_border"
                         android:backgroundTint="#FD6967"
                         android:gravity="center"
-                        android:visibility="visible"
+                        android:visibility="gone"
                         android:orientation="horizontal">
 
 
@@ -394,7 +381,7 @@
                         app:layout_constraintStart_toEndOf="@id/view_divider"
                         app:layout_constraintEnd_toStartOf="@id/btn_buy_facescan"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
+                        app:layout_constraintBottom_toBottomOf="parent" />
 
                     <Button
                         android:id="@+id/btn_buy_facescan"
@@ -422,7 +409,6 @@
             <include
                 android:id="@+id/scanProgressLayout"
                 layout="@layout/layout_scan_progress" />
-
 
 
             <LinearLayout
