--- a/app/src/main/res/layout/row_you_may_also_like.xml
+++ b/app/src/main/res/layout/row_you_may_also_like.xml
@@ -1,170 +1,149 @@
 <!-- res/layout/grid_item.xml -->
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:gravity="center"
-    android:layout_margin="10dp"
-    app:cardCornerRadius="@dimen/textsize_small"
-    android:background="@color/white"
+    android:background="@color/colorTransperent"
+    android:layout_margin="8dp"
     android:padding="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="110dp">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/item_image"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/facial_scan"
-                android:layout_margin="10dp"
-                android:background="@drawable/rounded_image_background"
-                android:clipToOutline="true" />
-
-            <ImageView
-                android:id="@+id/imageContentType"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/ic_video_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignEnd="@id/item_image"
-                android:scaleType="fitXY"
-                android:layout_marginBottom="10dp" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:cardCornerRadius="22dp"
+            android:background="@color/colorTransperent"
+            android:padding="0dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_marginVertical="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_toEndOf="@id/item_image"
-                android:layout_alignParentTop="true">
+                android:layout_height="100dp">
+
+                <ImageView
+                    android:id="@+id/item_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/facial_scan" />
 
                 <LinearLayout
-                    android:id="@+id/llTopBar"
+                    android:id="@+id/llVideoSeries"
                     android:layout_width="match_parent"
+                    android:gravity="center"
                     android:layout_height="wrap_content"
-                    android:visibility="gone"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_alignParentBottom="true"
+                    android:padding="6dp"
+                    android:background="#BF000000">
 
                     <ImageView
-                        android:id="@+id/img_module"
-                        android:layout_width="15dp"
-                        android:layout_marginHorizontal="6dp"
-                        android:layout_height="15dp" />
+                        android:id="@+id/img_iconview"
+                        android:layout_width="6dp"
+                        android:layout_height="12dp"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/video_jump_back_in" />
 
                     <TextView
-                        android:id="@+id/tvModuleName"
+                        android:id="@+id/item_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="video"
+                        android:textColor="@color/white"
                         android:fontFamily="@font/dmsans_regular"
-                        android:textSize="@dimen/textsize_small"
-                        android:textColor="@color/txt_color_header" />
-
-                    <View
-                        android:layout_width="1dp"
-                        android:layout_height="16dp"
-                        android:layout_marginHorizontal="6dp"
-                        android:background="@color/text_color_char_left" />
-
-                    <ImageView
-                        android:id="@+id/imageModuleTag"
-                        android:layout_width="15dp"
-                        android:src="@drawable/ic_tag"
-                        android:layout_marginHorizontal="6dp"
-                        android:layout_height="15dp" />
-
-                    <TextView
-                        android:id="@+id/tvCategory"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/dmsans_regular"
-                        android:textSize="@dimen/textsize_small"
-                        android:maxLines="1"
-                        android:ellipsize="end"
-                        android:textColor="@color/txt_color_header" />
+                        android:textSize="12sp"
+                        android:layout_marginStart="6dp" />
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/tvHeader"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:textSize="14sp"
-                    android:maxLines="2"
-                    android:ellipsize="end"
-                    android:fontFamily="@font/merriweather_bold"
-                    android:textColor="@color/txt_color_header" />
-
-
-
             </RelativeLayout>
+        </androidx.cardview.widget.CardView>
 
-        </RelativeLayout>
-        <LinearLayout
+        <TextView
+            android:id="@+id/tvTitle"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Simple Daily Habits to Boost Your Health, Energy, and Mood Without Changing Your Entire Routine"
+            android:textColor="@color/txt_color_journal_date"
+            android:gravity="center_vertical"
+            android:layout_marginStart="12dp"
+            android:textSize="14sp"
+            android:fontFamily="@font/merriweather_bold" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginVertical="16dp">
+
+        <TextView
+            android:id="@+id/tvName"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:fontFamily="@font/dmsans_regular"
+            android:textSize="@dimen/textsize_small"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="asdaskjdjakjsda"
+            android:textColor="@color/txt_color_header" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="10dp"
+            android:layout_marginHorizontal="8dp"
+            android:background="#767676"
+            android:layout_gravity="center_vertical" />
+
+        <TextView
+            android:id="@+id/tvdateTime"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:visibility="visible"
+            android:fontFamily="@font/dmsans_regular"
+            android:textSize="@dimen/textsize_small"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="15 AUg 2323"
+            android:textColor="#767676" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="10dp"
+            android:layout_marginHorizontal="8dp"
+            android:background="#767676"
+            android:layout_gravity="center_vertical" />
+
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="horizontal"
-            android:layout_marginBottom="10dp"
-            android:layout_alignParentBottom="true">
-
-            <TextView
-                android:id="@+id/tvName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/dmsans_regular"
-                android:textSize="@dimen/textsize_small"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="asdaskjdjakjsda"
-                android:textColor="@color/txt_color_header" />
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="16dp"
-                android:layout_marginHorizontal="8dp"
-                android:visibility="visible"
-                android:background="@color/text_color_char_left" />
-
-            <TextView
-                android:id="@+id/tvdateTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="visible"
-                android:fontFamily="@font/dmsans_regular"
-                android:textSize="@dimen/textsize_small"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="15 AUg 2323"
-                android:textColor="@color/txt_color_header" />
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="16dp"
-                android:layout_marginHorizontal="8dp"
-                android:visibility="visible"
-                android:background="@color/text_color_char_left" />
+            android:gravity="center_vertical">
 
             <TextView
                 android:id="@+id/tvLeftTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:visibility="visible"
+                android:layout_weight="7"
                 android:fontFamily="@font/dmsans_regular"
                 android:textSize="@dimen/textsize_small"
-                android:text=""
+                android:text="1m 24sec"
                 android:gravity="center"
-                android:layout_weight="1"
-                android:textColor="@color/txt_color_header" />
+                android:textColor="#767676" />
+
         </LinearLayout>
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#DDDDDD" />
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
