bug fixes of eat right

--- a/app/src/main/res/layout/fragment_eat_right_landing.xml
+++ b/app/src/main/res/layout/fragment_eat_right_landing.xml
@@ -1359,7 +1359,7 @@
                                     android:layout_marginStart="10dp"
                                     android:layout_marginTop="3dp"
                                     android:layout_marginEnd="10dp"
-                                    android:fontFamily="@font/dmsans_bold"
+                                    android:fontFamily="@font/dmsans_regular"
                                     android:text="Breakfast"
                                     android:textColor="@color/black_no_meals"
                                     android:textSize="14sp"
@@ -3525,8 +3525,9 @@
                             android:layout_height="50dp"
                             android:layout_marginTop="13dp"
                             android:layout_marginStart="8dp"
+                            android:fontFamily="@font/dmsans_bold"
                             android:text="Log Your Water Intake"
-                            android:textSize="16sp"
+                            android:textSize="14sp"
                             android:textColor="@color/white" />
                     </LinearLayout>
                 </LinearLayout>
@@ -3778,8 +3779,8 @@
                         android:layout_marginTop="12dp"
                         android:text="Recommended For You"
                         android:fontFamily="@font/dmsans_bold"
-                        android:textColor="@color/black"
-                        android:textSize="16sp"
+                        android:textColor="#00553A"
+                        android:textSize="18sp"
                         android:paddingBottom="8dp" />
 
                     <View
