--- a/app/src/main/res/layout/activity_todays_affirmation.xml
+++ b/app/src/main/res/layout/activity_todays_affirmation.xml
@@ -9,15 +9,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="20dp">
 
         <ImageView
             android:id="@+id/ivClose"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/close_affirmation"
+            android:src="@drawable/icon_back"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"/>
 
@@ -43,18 +43,6 @@
                 android:src="@drawable/arrow_drop_down"
                 android:layout_marginStart="4dp"/>
         </LinearLayout>
-
-        <Button
-            android:id="@+id/btnCreateAffirmation"
-            android:layout_width="90dp"
-            android:layout_height="35dp"
-            android:text="Create"
-            android:layout_alignParentEnd="true"
-            android:gravity="center"
-            android:textSize="10sp"
-            android:fontFamily="@font/dmsans_bold"
-            android:backgroundTint="@color/color_green"
-            android:enabled="false"/>
 
     </RelativeLayout>
 
