--- a/app/src/main/res/layout/bottomsheet_add_tag.xml
+++ b/app/src/main/res/layout/bottomsheet_add_tag.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
-    android:background="@drawable/toproundedcornershape"
+    android:background="@drawable/roundedcornershape"
+    android:backgroundTint="@color/gray_light_bg"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -13,11 +14,11 @@
 
         <ImageView
             android:id="@+id/imgClose"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/close_journal"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/close_breathwork"
             android:layout_alignParentEnd="true"
-            android:layout_margin="10dp" />
+            android:layout_margin="16dp" />
     </RelativeLayout>
 
     <TextView
@@ -25,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="-20dp"
-        android:fontFamily="@font/dmsans_bold"
+        android:fontFamily="@font/merriweather_bold"
         android:gravity="center"
         android:text="Add Tag"
         android:textColor="@color/txt_color_header"
@@ -65,8 +66,8 @@
         android:text="Save"
         android:textSize="16sp"
         android:fontFamily="@font/dmsans_bold"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/menuselected" />
+        android:textColor="@color/thinkright_text_color"
+        android:backgroundTint="@color/btn_color_journal" />
 
     <Button
         android:id="@+id/btnCancel"
@@ -79,7 +80,7 @@
         android:text="Cancel"
         android:textSize="16sp"
         android:fontFamily="@font/dmsans_bold"
-        android:textColor="@color/black"
+        android:textColor="@color/txt_color_journal_date"
         android:backgroundTint="@color/color_bg_button_affirmed" />
 
 </LinearLayout>
