--- a/app/src/main/res/layout/bottomsheet_delete_setting.xml
+++ b/app/src/main/res/layout/bottomsheet_delete_setting.xml
@@ -5,23 +5,22 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
     android:background="@drawable/toproundedcornershape"
-    android:backgroundTint="@color/gray_light_bg"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/ivDialogClose"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        android:src="@drawable/close_breathwork"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/close_journal"
         android:layout_gravity="end"
-        android:layout_margin="16dp"/>
+        android:layout_margin="8dp"/>
 
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="-16dp"
-        android:fontFamily="@font/merriweather_bold"
+        android:fontFamily="@font/dmsans_bold"
         android:layout_gravity="center_horizontal"
         android:text="Delete Tag?"
         android:textColor="@color/black"
@@ -39,29 +38,29 @@
         android:textSize="14sp" />
 
     <Button
-        android:id="@+id/btnDelete"
+        android:id="@+id/btnCancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:text="Delete"
+        android:text="Cancel"
         android:textSize="16sp"
         android:fontFamily="@font/dmsans_bold"
-        android:textColor="@color/color_think_right"
-        android:backgroundTint="@color/btn_color_journal"/>
+        android:textColor="@color/white"
+        android:backgroundTint="@color/menuselected"/>
 
     <Button
-        android:id="@+id/btnCancel"
+        android:id="@+id/btnYes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:text="Cancel"
+        android:text="Yes"
         android:textSize="16sp"
         android:fontFamily="@font/dmsans_bold"
-        android:textColor="@color/txt_color_journal_date"
+        android:textColor="@color/black"
         android:backgroundTint="@color/color_bg_button_affirmed"/>
 
 </LinearLayout>
