--- a/app/src/main/res/layout/activity_breathwork_practice.xml
+++ b/app/src/main/res/layout/activity_breathwork_practice.xml
@@ -111,13 +111,14 @@
         <!-- Breathing Phase -->
         <TextView
             android:id="@+id/breathingPhase"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_above="@+id/circleContainer"
             android:layout_marginTop="50dp"
             android:layout_marginBottom="50dp"
             android:text="Inhale"
+            android:gravity="center_horizontal"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/black" />
