--- a/app/src/main/res/layout/activity_home_new.xml
+++ b/app/src/main/res/layout/activity_home_new.xml
@@ -477,7 +477,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/dmsans_bold"
                 android:padding="5dp"
-                android:text="Explore"
+                android:text="My health"
                 android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
