--- a/app/src/main/res/layout/activity_subscription_plan_list.xml
+++ b/app/src/main/res/layout/activity_subscription_plan_list.xml
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/info_affirmation"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
