--- a/app/src/main/res/layout/row_past_subscription_history.xml
+++ b/app/src/main/res/layout/row_past_subscription_history.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_margin="4dp"
     app:cardCornerRadius="12dp"
     android:foreground="?android:attr/selectableItemBackground">
 
@@ -16,35 +16,36 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
             android:visibility="visible"
-            android:layout_alignTop="@+id/trialEnds"
+            android:id="@+id/img_download"
             android:src="@drawable/ic_download_pastsub" />
 
+
         <TextView
-            android:id="@+id/tvCurrentPlan"
+            android:id="@+id/tvPlanAmmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Current Plan"
-            android:background="@drawable/roundedcornershape"
-            android:layout_alignParentEnd="true"
-            android:textColor="@color/white"
-            android:paddingHorizontal="16dp"
-            android:textSize="12sp"
-            android:layout_marginVertical="8dp"
-            android:paddingVertical="5dp"
+            android:text="0.0"
+            android:textColor="@color/gray_past_price"
+            android:layout_marginEnd="@dimen/margin_card_16dp"
+            android:layout_centerVertical="true"
+            android:textSize="16sp"
+            android:layout_toStartOf="@+id/img_download"
             android:fontFamily="@font/dmsans_bold"
-            android:backgroundTint="@color/color_green"/>
+            android:paddingVertical="4dp"
+            />
 
         <TextView
             android:id="@+id/planName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Monthly Plan"
-            android:layout_marginVertical="8dp"
+
             android:fontFamily="@font/dmsans_bold"
             android:textColor="@color/txt_color_mind"
             android:layout_alignParentStart="true"
-            android:textSize="20sp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/planDescription"
@@ -53,30 +54,22 @@
             android:layout_below="@id/planName"
             android:text="First 14 days free · XXX/month"
             android:fontFamily="@font/dmsans_regular"
-            android:textColor="@color/txt_color_health"
-            android:textSize="14sp" />
-        <TextView
-            android:id="@+id/tvPlanAmmount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="₹3499"
-            android:layout_below="@+id/planDescription"
-            android:layout_marginVertical="8dp"
-            android:fontFamily="@font/dmsans_bold"
-            android:textColor="@color/txt_color_mind"
-            android:layout_alignParentStart="true"
-            android:textSize="20sp" />
+            android:textColor="@color/text_color_char_left"
+            android:visibility="gone"
+            android:textSize="16sp" />
+
         <TextView
             android:id="@+id/trialEnds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tvPlanAmmount"
-            android:text="Valid Till 10 Mar 0000"
+            android:layout_below="@id/planDescription"
+            android:text="Trial ends on ##-##-##"
             android:textColor="@color/text_color_char_left"
-            android:textSize="16sp"
+            android:textSize="12sp"
+            android:fontFamily="@font/dmsans_regular"
             android:layout_marginTop="4dp"
             android:drawablePadding="8dp"
-            android:drawableStart="@drawable/baseline_calendar" />
+             />
 
     </RelativeLayout>
 
