Following changes done 1. Journal Back Button click bottom sheet added 2. BreathWork - Info button,Add to Toolkit Button and Selected State 3. MindAudit- Quit dialog updated 4. MindAudit- Mind Audit Info Page Updated. 5. Only Re-take assessment button stays on the top panel. All the other buttons such as “Due Today”, “Due in next 10 days” etc, are to be removed. 6. The user can retake all the assessments any number of time he wants. 7. The Pre assessment questionnaire ( Others ) – Where we ask the user how have you been for the last 30 Days – Will be available only after 14 Day period has elapsed from the previous assessment . ( The CTA of “Retake assessment” will be available only after 14 Day

--- a/app/src/main/res/layout/item_breathwork.xml
+++ b/app/src/main/res/layout/item_breathwork.xml
@@ -57,8 +57,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/white_round_transferent__bg"
-            android:padding="5dp"
-            android:src="@drawable/save_icon" />
+            android:src="@drawable/add_breath_work" />
 
         <ImageView
             android:id="@+id/infoButton"
