--- a/app/src/main/res/layout/activity_mind_audit_from.xml
+++ b/app/src/main/res/layout/activity_mind_audit_from.xml
@@ -65,6 +65,8 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
+    <include layout="@layout/loader_layout"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
