--- a/app/src/main/res/layout/bottomsheet_breathwork_complete.xml
+++ b/app/src/main/res/layout/bottomsheet_breathwork_complete.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="-16dp"
-        android:fontFamily="@font/dmsans_bold"
+        android:fontFamily="@font/merriweather_bold"
         android:layout_gravity="center_horizontal"
         android:text="How do you feel after the exercise?"
         android:textColor="@color/black"
