--- a/app/src/main/res/layout/close_confirmation_bottomsheet.xml
+++ b/app/src/main/res/layout/close_confirmation_bottomsheet.xml
@@ -3,26 +3,20 @@
     android:id="@+id/design_bottom_sheet"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/gray_light_bg"
+    android:layout_marginTop="20dp"
+    android:background="@drawable/toproundedcornershape"
+    android:backgroundTint="@color/gray_light_bg"
     android:orientation="vertical">
-
-    <ImageView
-        android:id="@+id/ivDialogClose"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/close_breathwork"
-        android:layout_gravity="end"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="10dp" />
 
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-16dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/merriweather_bold"
         android:layout_gravity="center_horizontal"
-        android:text="Delete Tag?"
+        android:text="Are You Sure You Want\nTo Quit?"
+        android:gravity="center"
         android:textColor="@color/black"
         android:textSize="20sp" />
 
@@ -33,34 +27,34 @@
         android:layout_margin="20dp"
         android:fontFamily="@font/dmsans_regular"
         android:layout_gravity="center"
-        android:text="Are you sure you want to delete? This cannot be undone."
+        android:text="Your changes were not saved. You can still continue."
         android:textColor="@color/txt_color_header"
         android:textSize="14sp" />
 
     <Button
-        android:id="@+id/btnCancel"
+        android:id="@+id/btnYes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:text="Cancel"
+        android:text="Yes"
         android:textSize="16sp"
         android:fontFamily="@font/dmsans_bold"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/menuselected" />
+        android:textColor="@color/color_think_right"
+        android:backgroundTint="@color/btn_color_journal"/>
 
     <Button
-        android:id="@+id/btnYes"
+        android:id="@+id/btnNo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:text="Yes"
+        android:text="No"
         android:textSize="16sp"
         android:fontFamily="@font/dmsans_bold"
-        android:textColor="@color/black"
-        android:backgroundTint="@color/color_bg_button_affirmed" />
+        android:textColor="@color/txt_color_journal_date"
+        android:backgroundTint="@color/color_bg_button_affirmed"/>
 
 </LinearLayout>
