--- a/app/src/main/res/layout/dialog_mind_audit_disclaimer.xml
+++ b/app/src/main/res/layout/dialog_mind_audit_disclaimer.xml
@@ -1,36 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="16dp"
+    android:background="@drawable/roundedcornershape"
+    android:gravity="center">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/soft_beige"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/ic_close_dialog"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="20dp"
-            android:src="@drawable/closebtncircle" />
-
+        <!-- Title -->
         <TextView
             android:id="@+id/tv_selected_assessment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:fontFamily="@font/dmsans_bold"
-            android:paddingLeft="16dp"
-            android:text="ABC"
-            android:textColor="@color/black"
-            android:textSize="@dimen/textsize_large" />
+            android:text="Disclaimer"
+            android:fontFamily="@font/merriweather_bold"
+            android:textSize="22sp"
+            android:layout_marginTop="12dp"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/txt_color_header" />
 
+        <ImageView
+            android:id="@+id/ic_close_dialog"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/close_breathwork" />
     </RelativeLayout>
 
     <ScrollView
@@ -47,60 +45,58 @@
                 android:id="@+id/item_text1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="16dp"
                 android:fontFamily="@font/dmsans_regular"
                 android:padding="16dp"
                 android:textColor="@color/black"
-                android:text="The Clinical Anger Scale is a self-administered questionnaire that stands as a pivotal instrument assessing and quantifying the serverity of anger-related emotions and behaviors."/>
+                android:text="The Clinical Anger Scale is a self-administered questionnaire that stands as a pivotal instrument assessing and quantifying the serverity of anger-related emotions and behaviors." />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="vertical"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:layout_marginTop="16dp"
                 android:background="@color/color_assesment_dialog_gray"
                 android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/item_text2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
 
-                android:layout_marginEnd="16dp"
-
-
-                android:fontFamily="@font/dmsans_regular"
-                android:padding="16dp"
-                android:text="Consisting of 21 questions, the CAS score range from 0 to 63. This scale empowers mental health professionals"
-                android:textColor="@color/black" />
+                <TextView
+                    android:id="@+id/item_text2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:fontFamily="@font/dmsans_regular"
+                    android:padding="16dp"
+                    android:text="Consisting of 21 questions, the CAS score range from 0 to 63. This scale empowers mental health professionals"
+                    android:textColor="@color/black" />
             </LinearLayout>
+
             <TextView
                 android:id="@+id/item_text3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_marginHorizontal="16dp"
                 android:fontFamily="@font/dmsans_regular"
                 android:padding="16dp"
                 android:textColor="@color/black"
-                android:text="Snell, W. E. Jr"/>
+                android:text="Snell, W. E. Jr" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp">
-            <Button
-                android:id="@+id/btn_take_assessment"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_centerHorizontal="true"
-                android:backgroundTint="@color/btn_color_journal"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:textColor="@color/color_think_right"
-                android:text="Take Assessment"
-                android:fontFamily="@font/dmsans_bold"
-                android:textSize="16sp"/>
+                android:layout_margin="16dp">
+
+                <Button
+                    android:id="@+id/btn_take_assessment"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_centerHorizontal="true"
+                    android:backgroundTint="@color/btn_color_journal"
+                    android:layout_marginHorizontal="20dp"
+                    android:textColor="@color/color_think_right"
+                    android:text="Take Assessment"
+                    android:fontFamily="@font/dmsans_bold"
+                    android:textSize="16sp" />
             </RelativeLayout>
 
         </LinearLayout>
