--- a/app/src/main/res/layout/fragment_your_meal_logs.xml
+++ b/app/src/main/res/layout/fragment_your_meal_logs.xml
@@ -683,7 +683,7 @@
                                 android:layout_marginStart="5dp"
                                 android:layout_marginTop="3dp"
                                 android:layout_marginEnd="10dp"
-                                android:fontFamily="@font/dmsans_bold"
+                                android:fontFamily="@font/dmsans_regular"
                                 android:text="Breakfast"
                                 android:textColor="@color/black_no_meals"
                                 android:textSize="14sp"
@@ -1043,7 +1043,7 @@
                                 android:layout_marginStart="5dp"
                                 android:layout_marginTop="3dp"
                                 android:layout_marginEnd="10dp"
-                                android:fontFamily="@font/dmsans_bold"
+                                android:fontFamily="@font/dmsans_regular"
                                 android:text="Morning Snack"
                                 android:textColor="@color/black_no_meals"
                                 android:textSize="14sp"
@@ -1404,7 +1404,7 @@
                                 android:layout_marginStart="5dp"
                                 android:layout_marginTop="3dp"
                                 android:layout_marginEnd="10dp"
-                                android:fontFamily="@font/dmsans_bold"
+                                android:fontFamily="@font/dmsans_regular"
                                 android:text="Lunch"
                                 android:textColor="@color/black_no_meals"
                                 android:textSize="14sp"
@@ -1763,7 +1763,7 @@
                                 android:layout_marginStart="5dp"
                                 android:layout_marginTop="3dp"
                                 android:layout_marginEnd="10dp"
-                                android:fontFamily="@font/dmsans_bold"
+                                android:fontFamily="@font/dmsans_regular"
                                 android:text="Evening Snacks"
                                 android:textColor="@color/black_no_meals"
                                 android:textSize="14sp"
@@ -2124,7 +2124,7 @@
                                 android:layout_marginStart="5dp"
                                 android:layout_marginTop="3dp"
                                 android:layout_marginEnd="10dp"
-                                android:fontFamily="@font/dmsans_bold"
+                                android:fontFamily="@font/dmsans_regular"
                                 android:text="Dinner"
                                 android:textColor="@color/black_no_meals"
                                 android:textSize="14sp"
