--- a/app/src/main/res/layout/fragment_mindfull_graph.xml
+++ b/app/src/main/res/layout/fragment_mindfull_graph.xml
@@ -219,10 +219,90 @@
                         app:layout_constraintBottom_toBottomOf="@+id/percentage_icon"
                         app:layout_constraintStart_toEndOf="@+id/percentage_icon"/>
 
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/selectCalorieLayout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="62dp"
+                        android:elevation="4dp"
+                        android:visibility="invisible"
+                        android:background="@color/white"
+                        app:cardCornerRadius="10dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
+                        android:layout_marginTop="20dp"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_average_number"
+                        app:layout_constraintEnd_toEndOf="parent">
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingTop="5dp"
+                            android:paddingBottom="10dp"
+                            android:paddingStart="20dp"
+                            android:paddingEnd="20dp">
+
+                            <TextView
+                                android:id="@+id/selectedDate"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text=""
+                                android:fontFamily="@font/dmsans_regular"
+                                android:textSize="10sp"
+                                android:textColor="@color/black_no_meals"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                />
+
+                            <androidx.appcompat.widget.LinearLayoutCompat
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:gravity="center"
+                                app:layout_constraintTop_toBottomOf="@+id/selectedDate"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent">
+
+                                <TextView
+                                    android:id="@+id/selectedCalorieTv"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text=""
+                                    android:fontFamily="@font/dmsans_bold"
+                                    android:textSize="32sp"
+                                    android:textColor="@color/black_no_meals"
+                                    />
+
+                                <TextView
+                                    android:id="@+id/valueUnitTv"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="3dp"
+                                    android:text="mins"
+                                    android:fontFamily="@font/dmsans_regular"
+                                    android:textSize="10sp"
+                                    android:textColor="@color/black_no_meals"
+                                    />
+
+                                <ImageView
+                                    android:id="@+id/calIc"
+                                    android:layout_width="15dp"
+                                    android:layout_height="15dp"
+                                    android:visibility="gone"
+                                    android:layout_marginStart="3dp"
+                                    android:src="@drawable/ic_cal"
+                                    />
+
+                            </androidx.appcompat.widget.LinearLayoutCompat>
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    </androidx.cardview.widget.CardView>
+
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toBottomOf="@+id/percentage_text"
+                        app:layout_constraintTop_toBottomOf="@+id/selectCalorieLayout"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:id="@+id/lyt_chart">
@@ -301,6 +381,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_mindfull_title"
                 app:layout_constraintStart_toStartOf="parent"/>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView_mindfulness_analysis"
                 android:layout_width="match_parent"
