--- a/app/src/main/res/layout/fragment_snap_meal_description.xml
+++ b/app/src/main/res/layout/fragment_snap_meal_description.xml
@@ -59,7 +59,7 @@
             <ImageView
                 android:layout_width="250dp"
                 android:layout_height="250dp"
-                android:src="@drawable/back"
+                android:src="@drawable/poha_image"
                 android:layout_gravity="center" />
 
             <TextView
