--- a/app/src/main/res/layout/item_breakfast_meal_logs_ai.xml
+++ b/app/src/main/res/layout/item_breakfast_meal_logs_ai.xml
@@ -59,7 +59,7 @@
                 app:layout_constraintStart_toEndOf="@+id/image_meal"
                 app:layout_constraintTop_toTopOf="parent"
                 android:textSize="14sp"
-                android:fontFamily="@font/dmsans_bold"
+                android:fontFamily="@font/dmsans_regular"
                 android:textColor="@color/black_no_meals"
                 android:text="" />
 
