--- a/app/src/main/res/layout/item_stat_card.xml
+++ b/app/src/main/res/layout/item_stat_card.xml
@@ -43,6 +43,7 @@
             android:layout_height="1dp"
             android:background="@color/gray"
             android:layout_marginTop="5dp"
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/top_layout"/>
