RL Change DOc 98 to 108 Changes sleep Sound changes subscription histrory ui changes

--- a/app/src/main/res/layout/activity_subscription_history.xml
+++ b/app/src/main/res/layout/activity_subscription_history.xml
@@ -70,18 +70,26 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
+                    android:orientation="vertical"
                     android:gravity="center_vertical"
                     android:padding="16dp">
 
                     <TextView
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@color/txt_color_health"
+                        android:fontFamily="@font/dmsans_bold"
+                        android:textSize="@dimen/textsize_large18sp"
+                        android:text="You have no active subscription at this moment." />
+                    <TextView
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:textColor="@color/text_color_char_left"
                         android:fontFamily="@font/dmsans_regular"
-                        android:textSize="14sp"
-                        android:text="No Data available in Active Subscription" />
+                        android:textSize="@dimen/textsize_medium"
+                        android:text="Unlock RightLife’s full potential with a plan that fits you." />
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -126,19 +134,26 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
+                    android:orientation="vertical"
                     android:gravity="center_vertical"
                     android:padding="16dp">
-
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@color/txt_color_health"
+                        android:fontFamily="@font/dmsans_bold"
+                        android:textSize="@dimen/textsize_large18sp"
+                        android:text="You have no past subscription at this moment." />
                     <TextView
                         android:id="@+id/settingTitle"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:textColor="@color/text_color_char_left"
                         android:fontFamily="@font/dmsans_regular"
                         android:textSize="14sp"
-                        android:text="No Data available in Past Subscription" />
+                        android:text="Unlock RightLife’s full potential with a plan that fits you." />
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
