--- a/app/src/main/res/layout/item_playlist.xml
+++ b/app/src/main/res/layout/item_playlist.xml
@@ -25,7 +25,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Lorem Ipsum"
-            android:textStyle="bold"
+            android:fontFamily="@font/dmsans_bold"
+            android:maxLength="20"
+            android:ellipsize="end"
+            android:textColor="@color/txt_color_journal_date"
             android:textSize="16sp"/>
 
         <TextView
@@ -33,14 +36,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Lorem Ipsum"
+            android:fontFamily="@font/dmsans_regular"
             android:textSize="12sp"
-            android:textColor="#888888"/>
+            android:textColor="@color/txt_color_journal_date"/>
     </LinearLayout>
 
     <ImageView
         android:id="@+id/playingIcon"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:src="@drawable/ic_play_player"
-        android:visibility="gone"/>
+        android:src="@drawable/ic_pause_player_new"
+        android:visibility="visible"/>
+    <ImageView
+        android:id="@+id/deleteIcon"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:src="@drawable/breathing_green_tick"
+        android:visibility="visible"/>
 </LinearLayout>
