--- a/app/src/main/res/layout/activity_new_sleep_sound.xml
+++ b/app/src/main/res/layout/activity_new_sleep_sound.xml
@@ -195,6 +195,27 @@
         </LinearLayout>
         <!-- Next: Other Content Below -->
         <include layout="@layout/loader_layout" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_centerInParent="true"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:id="@+id/ll_no_data"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="Build your perfect sleep playlist."
+                android:fontFamily="@font/dmsans_bold"
+                android:textSize="@dimen/textsize_large18sp"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="Add any track by tapping the + at the top right."
+                android:fontFamily="@font/dmsans_regular"
+                android:textSize="@dimen/textsize_medium"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
     </RelativeLayout>
 
 </ScrollView>
