Following Changes Done 1. Affirmation changes removed 2. EatAffectMoodFragment question updated 3. FoodServingFragment question updated 4. EnergyLevelFragment question updated 5. AnexityPowerFragment question updated 6. SleepSelectionFragment question updated 7. FoodPreferenceFragment options updated 8. StressManagementSelectionFragment question updated 9. TR SR, ER MR – Acknowledgment Pop ups updated 10. Gratitude Prompt Listing Page changes 11. Grief Prompt Listing Page 12. Mind Audit assessment title in their questionnaire to be in Merriweather

--- a/app/src/main/res/layout/activity_grief.xml
+++ b/app/src/main/res/layout/activity_grief.xml
@@ -107,7 +107,8 @@
                 android:gravity="top|start"
                 android:padding="12dp"
                 android:inputType="textMultiLine"
-                android:maxLength="5000"/>
+                android:maxLength="5000"
+                android:layout_margin="8dp"/>
         </LinearLayout>
     </ScrollView>
 
