--- a/app/src/main/res/layout/activity_freeform.xml
+++ b/app/src/main/res/layout/activity_freeform.xml
@@ -62,7 +62,7 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="12dp"
                 app:cardElevation="4dp"
-                android:layout_marginTop="8dp">
+                android:layout_margin="8dp">
 
                 <TextView
                     android:id="@+id/tvGreeting"
@@ -89,7 +89,8 @@
                 android:gravity="top|start"
                 android:padding="12dp"
                 android:inputType="textMultiLine"
-                android:maxLength="5000"/>
+                android:maxLength="5000"
+                android:layout_margin="8dp"/>
         </LinearLayout>
     </ScrollView>
 
