--- a/app/src/main/res/layout/activity_maassessment_questions.xml
+++ b/app/src/main/res/layout/activity_maassessment_questions.xml
@@ -61,7 +61,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="10dp"
-            android:fontFamily="@font/dmsans_regular"
+            android:fontFamily="@font/merriweather_regular"
             android:textSize="@dimen/textsize_medium"
             android:layout_height="wrap_content" />
 
