--- a/app/src/main/res/layout/dialog_playlist_created.xml
+++ b/app/src/main/res/layout/dialog_playlist_created.xml
@@ -3,9 +3,8 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    card_view:cardCornerRadius="20dp"
-    card_view:cardElevation="10dp"
-    card_view:cardUseCompatPadding="true">
+    card_view:cardCornerRadius="25dp"
+    card_view:cardElevation="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
