--- a/app/src/main/res/layout/row_journal_prompt.xml
+++ b/app/src/main/res/layout/row_journal_prompt.xml
@@ -7,7 +7,8 @@
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
     app:cardCornerRadius="12dp"
-    app:cardElevation="8dp">
+    app:cardElevation="10dp"
+    android:backgroundTint="#FDFDFD">
 
     <RelativeLayout
         android:layout_width="match_parent"
